# urban-farming-backend

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  cloudbuild.yaml  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/core/: config.py  errors.py  logging.py  security.py  tokens.py
app/infrastructure/: auth_store.py  data_gateway.py  email.py  postgres_gateway.py  storage.py  supabase_gateway.py
app/routers/: accounts.py  admin.py  auth.py  commerce.py  communications.py  community.py  data.py  gardens.py  geocoding.py  health.py  inspections.py  plans.py
app/schemas/: auth.py  commerce.py  common.py  communications.py  gardens.py  inspections.py
app/services/: gardens.py  inspection_scoring.py
database/cloud_sql/: 0000_supabase_compatibility.sql  0001_fix_grower_stats_percentage_precision.sql
database/supabase_migrations/: 20260615192042_4a589edb-da3e-44ed-903f-836fee128097.sql  20260615192055_00a62e6f-9b80-4b5b-acbc-b2a3cc6b9613.sql  20260620110000_garden_requests.sql  20260620143000_user_settings_and_records.sql  20260620152000_garden_management_tables.sql  20260620154000_seed_missing_garden_crops.sql  20260620231917_installations_owner_insert_policy.sql  (+12 more)
docs/: API_INVENTORY.md  DEPLOY_CLOUD_RUN.md
scripts/: bootstrap_cloud_sql.sh  export_supabase_data.sh  import_cloud_sql_data.sh  sync_frontend_env.py
tests/: test_app.py  test_auth_routes.py  test_garden_service.py  test_inspection_scoring.py  test_inspections_router.py  test_native_auth.py  test_postgres_gateway.py  test_supabase_gateway.py
