[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "urban-farming-backend"
version = "0.1.0"
description = "GCP-ready API for the Urban Farming platform"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.16,<2",
  "asyncpg>=0.30,<1",
  "cachetools>=6,<7",
  "email-validator>=2.2,<3",
  "fastapi>=0.116,<1",
  "google-cloud-secret-manager>=2.24,<3",
  "google-cloud-storage>=3.2,<4",
  "httpx>=0.28,<1",
  "pydantic-settings>=2.10,<3",
  "pyjwt[crypto]>=2.10,<3",
  "python-multipart>=0.0.20,<1",
  "sqlalchemy[asyncio]>=2.0.41,<3",
  "structlog>=25.4,<26",
  "tenacity>=9.1,<10",
  "uvicorn[standard]>=0.35,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4,<9",
  "pytest-asyncio>=1.1,<2",
  "pytest-cov>=6.2,<7",
  "respx>=0.22,<1",
  "ruff>=0.12,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "RUF"]
ignore = ["B008"]
